cmake_minimum_required(VERSION 2.8.3)
project(myroscpp)

aux_source_directory(. DIR_SRCS)

add_library(dutility SHARED  include/utilities_impl.cpp)
add_library(sutility   include/utilities_impl.cpp)

include_directories(include)
add_executable(fixUsbId src/getUSBid.cpp)
add_executable(complex src/complex.cpp)
add_executable(vector src/vector.cpp)
add_executable(fileop src/fileop.cpp)
add_executable(getEnv src/getEnv.cpp)
add_executable(outOfRange src/exceptOutofRange.cpp)
add_executable(time src/time.cpp)
add_executable(atox src/atox.cpp)
add_executable(listsort src/listsort.cpp)
add_executable(vectorsort src/vectorsort.cpp)
add_executable(boostbind src/boostbind.cpp)
add_executable(boostmoment src/boostmoment.cpp)
add_executable(test src/utilities_test.cpp)
target_link_libraries(test sutility)

add_executable(map src/map.cpp)
